Fixed border behind experience card

--- a/src/components/experienceCard/experienceCard.module.scss
+++ b/src/components/experienceCard/experienceCard.module.scss
@@ -16,7 +16,7 @@
 }
 
 .companyLogo {
-  // background-color: #ffffff;
+  background-color: #ffffff;
   position: absolute;
   top: 0px;
   right: 0%;
@@ -35,7 +35,9 @@
 }
 
 .experienceAccordion {
+  position: relative;
   text-align: left;
+  z-index: 2;
 }
 .experienceAccordionContent {
   display: none;
@@ -96,6 +98,7 @@
   position: absolute; 
   top: -20px;
   left: -30px;
+  z-index: 2;
 }
 
 .experienceItem:nth-of-type(2n) {
